--- a/index.html
+++ b/index.html
@@ -6,6 +6,54 @@
 <title>Bo‘limlar</title>
 
 <style>
+  /* 🌙 Tungi rejim */
+.dark body {
+  background: #121212;
+  color: white;
+}
+
+.dark .frame {
+  background: #1e1e1e;
+  border-color: #444;
+}
+
+.dark .card-box {
+  background: #2a2a2a;
+  color: #fff;
+}
+
+.dark .btn {
+  background: #444;
+}
+
+.dark .lang-btn {
+  background: #333;
+  color: white;
+}
+
+.dark .lang-btn.active {
+  background: #fff;
+  color: #000;
+}
+
+.dark #translateBtn {
+  background: #333;
+  color: #fff;
+}
+
+.dark .modal-box,
+.dark .translate-inner,
+.dark .list-inner,
+.dark .captcha-inner {
+  background: #1e1e1e;
+  color: white;
+}
+
+.dark input {
+  background: #2b2b2b;
+  color: white;
+  border-color: #555;
+}
   body{
     margin:0;
     padding:20px;
@@ -65,7 +113,17 @@
 </head>
 
 <body>
-
+<button id="modeBtn" style="
+  position:absolute;
+  bottom:10px;
+  right:10px;
+  padding:10px 16px;
+  background:#222;
+  color:white;
+  border:none;
+  border-radius:6px;
+  cursor:pointer;
+">🌙</button>
 <div id="list"></div>
 <div id="addBtn">+</div>
 
@@ -126,6 +184,29 @@
   };
 
   render();
+  /* 🌙 Tungi rejim */
+let dark = false;
+
+modeBtn.onclick = () => {
+  dark = !dark;
+
+  if (dark) {
+    document.documentElement.classList.add("dark");
+    modeBtn.textContent = "☀️";   // kunduzga o‘tish
+    localStorage.setItem("darkMode", "on");
+  } else {
+    document.documentElement.classList.remove("dark");
+    modeBtn.textContent = "🌙";   // tun rejimi
+    localStorage.setItem("darkMode", "off");
+  }
+};
+
+/* 🔄 Sahifa ochilganda avto yuklash */
+if (localStorage.getItem("darkMode") === "on") {
+  document.documentElement.classList.add("dark");
+  modeBtn.textContent = "☀️";
+  dark = true;
+}
 </script>
 
 </body>
